# Atlas-Portfolio-Project

./: DevNotes.md  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  blog.py  projects.py
backend/app/core/: config.py
backend/app/crud/: blog.py  project.py  user.py
backend/app/db/: mongodb.py
backend/app/models/: blog.py  project.py  user.py
backend/app/schemas/: blog.py  project.py  token.py  user.py
backend/app/services/: blog.py  project.py  user.py
frontend/: build_log.txt  build_output.txt  package-lock.json  package.json  verify_icons.js
frontend/app/(marketing)/: page.tsx
frontend/app/(marketing)/portfolio/: page.tsx
frontend/app/(marketing)/pricing/: page.tsx
frontend/app/(marketing)/product/: page.tsx
frontend/app/sharedComponents/effects/: Hero3DBackground.tsx  PortfolioBackground.tsx  ProductHeroBackground.tsx
frontend/app/sharedComponents/sections/: Certifications.tsx  FeatureGrid.tsx  InteractiveHero.tsx  LogoShowcase.tsx  MetricVisuals.tsx  MetricsStats.tsx  PricingFAQ.tsx  PricingFeatures.tsx  PricingFinalCTA.tsx  PricingTable.tsx  ProblemSolution.tsx  ProductFeatureVisuals.tsx  ProductHero.tsx  SystemCTA.tsx  TechnicalSynchronizer.tsx  Testimonials.tsx
frontend/app/sharedComponents/ui/: AnimatedRitualIcon.tsx  DocsHeaderIcon.tsx  Icon.tsx  ProjectCard3D.tsx
